# nborder

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  action.yml  pyproject.toml
.github/: AUDIT_v0.1.0.md  BUILD_PLAN.md  copilot-instructions.md  tech-debt-review.md
.github/workflows/: ci.yml  example-lint.yml  release.yml
docs/: index.md  known-limitations.md  output-formats.md
docs/development/: screenshots.md
docs/integrations/: github-actions.md  pre-commit.md
docs/rules/: NB101.md  NB102.md  NB103.md  NB201.md
src/nborder/: check.py  cli.py  config.py  rule_docs.py
src/nborder/fix/: models.py  pipeline.py  seeds.py
src/nborder/graph/: builder.py  cst_helpers.py  extractor.py  models.py  wildcards.py
src/nborder/parser/: magics.py  models.py  reader.py  writer.py
src/nborder/reporters/: base.py  github.py  jsonout.py  sarif.py  text.py
src/nborder/rules/: nb101.py  nb102.py  nb103.py  nb201.py  seed_calls.py  seed_registry.py  suppression.py  types.py  unresolved.py
tests/: conftest.py  test_cli.py  test_config.py  test_github_reporter.py  test_graph_builder.py  test_graph_cst_helpers.py  test_graph_extractor.py  test_json_reporter.py  test_magic_stripping.py  test_nb101.py  test_nb102.py  test_nb103.py  test_nb103_determinism.py  test_nb201.py  test_parser.py  test_reorder_fix.py  test_sarif_reporter.py  test_seed_registry.py  test_smoke.py  test_suppression.py  test_text_reporter.py  test_unresolved_partition.py  test_writer.py
tests/fixtures/NB101/: fixed.ipynb  monotonic_with_nulls.ipynb  non_monotonic.ipynb
tests/fixtures/NB102/: undefined_name.ipynb
tests/fixtures/NB103/: config_numpy_only.ipynb  jax_unseeded.ipynb  noqa_nb103.ipynb  numpy_custom_alias.ipynb  numpy_default_rng_then_legacy.ipynb  numpy_legacy_seeded.ipynb  numpy_modern_seeded.ipynb  numpy_preimported_in_parameters.ipynb  numpy_torch_unseeded.ipynb  numpy_unseeded.ipynb  papermill_seed_parameter.ipynb  parameters_insert_position.ipynb  reorder_then_seeds.ipynb  sklearn_random_state_none.ipynb  torch_cuda_unseeded.ipynb
tests/fixtures/NB201/: use_df_later_def.ipynb
tests/fixtures/phase3/: mixed.ipynb  parameters_late.ipynb  reorder_cycle.ipynb  reorder_dag.ipynb  reorder_v40.ipynb  reorder_v44.ipynb  reorder_v45.ipynb  skip_name_error.ipynb  wildcard.ipynb
tests/fixtures/real_world/: 00.00-Preface.ipynb  01.04-Input-Output-History.ipynb  01.05-IPython-And-Shell-Commands.ipynb  01.06-Errors-and-Debugging.ipynb  02.00-Introduction-to-NumPy.ipynb  02.03-Computation-on-arrays-ufuncs.ipynb  02.05-Computation-on-arrays-broadcasting.ipynb  02.07-Fancy-Indexing.ipynb
tests/fixtures/roundtrip/: v40_clean.ipynb  v44_clean.ipynb  v45_clean.ipynb
tests/fixtures/suppression/: NB101.ipynb  NB101_with_counts.ipynb  NB102.ipynb  NB103.ipynb  NB201.ipynb  all_codes.ipynb
