[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nborder"
version = "0.0.1"
description = "Jupyter notebook linter for hidden-state and execution-order bugs."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Brad Kinnard" },
]
dependencies = [
    "libcst>=1.5",
    "nbformat>=5.10",
    "rich>=13.9",
    "tomli>=2.0; python_version < '3.11'",
    "typer>=0.15",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14",
    "pre-commit>=4.0",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]
reproduce = [
    "papermill>=2.6",
]

[project.scripts]
nborder = "nborder.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
files = ["src"]
